--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "serve": "cross-env NODE_ENV=development nodemon"
   },
   "keywords": [],
   "author": "",
@@ -19,13 +20,14 @@
     "multer": "^1.4.1",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.42.0",
-    "sequelize-cli": "^5.4.0"
+    "sequelize": "^4.42.0"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "sequelize-cli": "^5.4.0"
   }
 }
