--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@jimp/custom": "^0.6.0",
     "@jimp/plugin-circle": "^0.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jimp": "^0.6.0",
