--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
   DEPLOY_PATH: /root/coffee-print/coffee-print-server
   DOCKER_APP_PATH: app
   SERVICE_NAME: coffee-print
+  PATH_UPLOADS: uploads
 
 sudo: false
 
@@ -33,7 +34,8 @@ deploy:
   provider: script
   skip_cleanup: true
   script: bash -c '
-    ssh root@$SSH_HOST "systemctl stop $SERVICE_NAME && rm -rf $DEPLOY_PATH"
+    ssh root@$SSH_HOST "systemctl stop $SERVICE_NAME
+      && cd $DELPOY_PATH && find ! -path "./$PATH_UPLOADS*" -a -delete"
     && rsync --recursive ./* $SSH_USER@$SSH_HOST:$DEPLOY_PATH/
     && ssh root@$SSH_HOST "
       cd $APP_PATH
