--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "start": "npx cross-env NODE_ENV=production node index.js",
     "serve": "npx cross-env NODE_ENV=development nodemon"
   },
+  "engines": {
+    "node": ">=10.14.1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
@@ -26,6 +30,7 @@
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.1",
     "nodemon": "^1.18.9",
     "sequelize-cli": "^5.4.0"
   }
