--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ deploy:
   skip_cleanup: true
   script: bash -c '
     ssh root@$SSH_HOST "systemctl stop $SERVICE_NAME
-      && cd $DELPOY_PATH && find ! -path "./$PATH_UPLOADS*" -a -delete"
+      && cd $DEPLOY_PATH && find ! -path "./$PATH_UPLOADS*" -delete"
     && rsync --recursive ./* $SSH_USER@$SSH_HOST:$DEPLOY_PATH/
     && ssh root@$SSH_HOST "
       cd $APP_PATH
@@ -44,5 +44,3 @@ deploy:
       && systemctl start $SERVICE_NAME"'
   on:
     branch: master
-
-    #   && cd $DELPOY_PATH && find ! -path "./$PATH_UPLOADS*" -a -delete"
