--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx cross-env NODE_ENV=production node index.js",
-    "serve": "npx cross-env NODE_ENV=development nodemon"
+    "serve": "npx cross-env NODE_ENV=development nodemon",
+    "db:migrate": "npx sequelize db:migrate",
+    "db:rollback": "npx sequelize db:migrate:undo"
   },
   "engines": {
     "node": ">=10.14.1"
@@ -15,11 +17,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "jimp": "^0.6.0",
     "multer": "^1.4.1",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
