--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,8 @@ deploy:
   skip_cleanup: true
   script: bash -c '
     ssh root@$SSH_HOST "systemctl stop $SERVICE_NAME
-      && cd $DEPLOY_PATH && find . -not -path './$PATH_UPLOADS*' -delete"
+      && find $DEPLOY_PATH -not -path '$DEPLOY_PATH'
+        -not -path '$DEPLOY_PATH/$PATH_UPLOADS*' -delete"
     && rsync --recursive ./* $SSH_USER@$SSH_HOST:$DEPLOY_PATH/
     && ssh root@$SSH_HOST "
       cd $APP_PATH
