--- a/.travis.yml
+++ b/.travis.yml
@@ -34,8 +34,7 @@ deploy:
   provider: script
   skip_cleanup: true
   script: bash -c '
-    ssh root@$SSH_HOST "systemctl stop $SERVICE_NAME
-      && find $DEPLOY_PATH -not -path '$DEPLOY_PATH'
-        -not -path '$DEPLOY_PATH/$PATH_UPLOADS*' -delete"'
+    ssh root@$SSH_HOST "find $DEPLOY_PATH -not -path '$DEPLOY_PATH'
+        -not -path '$DEPLOY_PATH/$PATH_UPLOADS*'"'
   on:
     branch: master
