--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,8 @@ deploy:
   provider: script
   skip_cleanup: true
   script: bash -c '
-    ssh root@$SSH_HOST "find $DEPLOY_PATH -not -path '$DEPLOY_PATH'
-        -not -path '$DEPLOY_PATH/$PATH_UPLOADS*' -delete"'
+    ssh root@$SSH_HOST "find /root/coffee-print/coffee-print-server
+        -not -path '/root/coffee-print/coffee-print-server'
+        -not -path '/root/coffee-print/coffee-print-server/uploads*' -delete"'
   on:
     branch: master
