--- a/.travis.yml
+++ b/.travis.yml
@@ -34,8 +34,13 @@ deploy:
   provider: script
   skip_cleanup: true
   script: bash -c '
-    ssh root@$SSH_HOST "find /root/coffee-print/coffee-print-server
-        -not -path \"/root/coffee-print/coffee-print-server\"
-        -not -path \"/root/coffee-print/coffee-print-server/uploads*\" -delete"'
+    ssh root@$SSH_HOST "systemctl stop $SERVICE_NAME
+      && cd $DEPLOY_PATH && find -not -path \"./$PATH_UPLOADS*\" -delete"
+    && rsync --recursive ./* $SSH_USER@$SSH_HOST:$DEPLOY_PATH/
+    && ssh root@$SSH_HOST "
+      cd $APP_PATH
+      && docker-compose run app bash -c \"
+        cd $DOCKER_APP_PATH && npm install && npx sequelize db:migrate \"
+      && systemctl start $SERVICE_NAME"'
   on:
     branch: master
