--- a/.travis.yml
+++ b/.travis.yml
@@ -34,12 +34,12 @@ deploy:
   provider: script
   skip_cleanup: true
   script: bash -c '
-    ssh root@$SSH_HOST "systemctl stop $SERVICE_NAME
+    ssh $SSH_USER@$SSH_HOST "systemctl stop $SERVICE_NAME
       && cd $DEPLOY_PATH && find -not -path \"./$PATH_UPLOADS*\" -delete"
     && rsync --recursive ./* $SSH_USER@$SSH_HOST:$DEPLOY_PATH/
-    && ssh root@$SSH_HOST "
+    && ssh $SSH_USER@$SSH_HOST "
       cd $APP_PATH
-      && docker-compose run app bash -c \"
+      && docker-compose run server bash -c \"
         cd $DOCKER_APP_PATH && npm install && npx sequelize db:migrate \"
       && systemctl start $SERVICE_NAME"'
   on:
